src/components/lancer/SquadPanel/SquadPanel.scss
@import '../../../fonts';

.SquadPanel {
	@include standard_side_margin;
  margin-top: 20px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  box-sizing: border-box;
  align-items: center;
	overflow: hidden;

  .squad-container {
    @include shadow;
    @include parchment_background;
    // @include nouveau_border("nouveau_lancer_squad.svg");
		border-radius: 14px;
		// background-color: $concrete_violet_dark;
		// background-color: $parchment_dark;

		position: relative;
    box-sizing: border-box;
    padding: 40px 38px;
    width: 100%;
    max-width: 800px;

    @include below_max_width {
      padding: 110px 26px;
    }

		.mechs-container {
			display: grid;
			grid-template-columns: 1fr 50px 1fr;
			// grid-template-columns: 1fr 62px 1fr;

			.SquadMech {
				&:nth-child(odd) {
					grid-column: 2 / span 2;
					// margin-left: auto;
				}

				&:nth-child(even) {
					grid-column: 1 / span 2;
					// margin-right: auto;
				}
			}
		}
	}
}

